Implementando fluxo para salvar receita/despesa no backend (#23)
* Implementando fluxo para salvar receita/despesa no backend

* Adicionando atributo de valor de compra de produto da cozina

* Consertando erros em mensagens no sistema

---------

Co-authored-by: Fernando Martins Ferreira <fmartinsf@minsait.com>